# chattools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
chat_tools/: .env.id  __init__.py  base.py  chatgpt.py  commands.py  deepseek.py  gemini.py  gpt.py  groq.py  mistral.py  mixin.py  ollama.py
chattools/: .env.key  __init__.py  chatgpt.py  commands.py  deepseek.py  gemini.py  groq.py  mistral.py  mixin.py  roles.yml  test-gemini.py  test-mistral.py  test.py  utils.py
test/: test-gemini.py  test-mistral.py  test.py
